--- a/example/pom.xml
+++ b/example/pom.xml
@@ -20,7 +20,7 @@
         <httpasyncclient.version>4.1.4</httpasyncclient.version>
         <nuprocess.version>2.0.0</nuprocess.version>
         <htmlparse.version>2.1</htmlparse.version>
-        <jvppeteer.version>1.1.5</jvppeteer.version>
+        <jvppeteer.version>1.1.6</jvppeteer.version>
         <htmlunit.version>2.38.0</htmlunit.version>
     </properties>
     <dependencies>
@@ -64,7 +64,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.github.fanyong920</groupId>
+            <groupId>io.github.cccy0</groupId>
             <artifactId>jvppeteer</artifactId>
             <version>${jvppeteer.version}</version>
             <scope>compile</scope>
